Refatoração do emprestimos-ms